--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1 style="border:2px teal;">What I Plan To Do After High SChool</h1>
-<p>After I graduate from high school, I want to attend a four year college. My dream college is Emory
+<html lang="en-US"> 
+  <head>
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css"> 
+  </head>
+  <body>
+  <div class="navbar">
+    <li><a href="./">About</a></li> 
+  </div>
+  <div class="main">
+    <div class="clearfix" width=80%>
+      <img class="img1" src"ilsia-picture.jpg" alt="A snapchat mirror picture of me" width="30%">
+      <h1 style="border:2px teal;">What I Plan To Do After High SChool</h1>
+      <p>
+        After I graduate from high school, I want to attend a four year college. My dream college is Emory
 University. <a herf="https://www.emory.edu/home/index.html" target="_blank">Here's the website!</a>.
 I want to major in Biology. During college, I want to intern at a Veterinary clinic to get experience in the field. 
-I plan to get all A's in College so that my GPA can be at least a 3.7. </p>
-
-<p>If I do get in Vet school, I want to complete those four years. I want to be able to perform surgery
+I plan to get all A's in College so that my GPA can be at least a 3.7. 
+     </p>
+     <p>
+  If I do get in Vet school, I want to complete those four years. I want to be able to perform surgery
 on any type of animal. I want to be able to help animals give birth. I saw a video of a Vet Doctor that
-helped a horse give birth to her foal (baby horse). </p>
+helped a horse give birth to her foal (baby horse). 
+     </p>
 
 Here is a list of my favorite animals:
-<ul>
+<ul> 
 <li>Dogs</li>
 <li>Bunnies</li>
 <li>Birds</li>
 <li>Pigs</li>
 <li>Horses</li>
 <li>Cats</li>
-</ul>
-
-</body>
+      </ul>
+    </div>
+    </body>
 </html>
